# tremolo-sharp

./: .gitignore  .gitmodules  README.md  tremolo-sharp.sln  vorbis-sharp.cs
jni/: Android.mk  Application.mk
native/: CMakeLists.txt  Makefile
native/include/log/: log.h
tremolo-sharp/: tremolo-sharp.cs  tremolo-sharp.csproj
tremolo-sharp/Properties/: AssemblyInfo.cs
tremolo-sharp/Resources/: Resource.designer.cs
tremolo-sharp/Resources/values/: Strings.xml
